tests/error/if_consteval_error_then_block.bz
function test()
{
	let _ = if consteval (true) { [ null as int32 ] };
}
